--- a/init.org
+++ b/init.org
@@ -1,5 +1,6 @@
 #+TITLE: Emacs configuration file
 #+AUTHOR: Lars Tveito
+#+AUTHOR: Derrell Lipman
 #+BABEL: :cache yes
 #+LATEX_HEADER: \usepackage{parskip}
 #+LATEX_HEADER: \usepackage{inconsolata}
@@ -2702,6 +2703,7 @@ Open up a new window. We're nearly done.
   My Emacs configurations written in Org mode.
 
   Copyright (c) 2013 - 2020 Lars Tveito
+  Copyright (c) 2020        Derrell Lipman
 
   This program is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
