--- a/init.org
+++ b/init.org
@@ -363,8 +363,9 @@
    #+BEGIN_SRC emacs-lisp
    (dolist (mode
             '(tool-bar-mode                ; No toolbars, more room for text
-              scroll-bar-mode              ; No scroll bars either
-              blink-cursor-mode))          ; The blinking cursor gets old
+   ;;           scroll-bar-mode              ; No scroll bars either
+              blink-cursor-mode)
+            )          ; The blinking cursor gets old
      (funcall mode 0))
    #+END_SRC
 
@@ -377,7 +378,7 @@
               column-number-mode           ; Show column number in mode line
               delete-selection-mode        ; Replace selected text
               dirtrack-mode                ; directory tracking in *shell*
-                                           ;djl global-company-mode          ; Auto-completion everywhere
+              ;;djl global-company-mode          ; Auto-completion everywhere
               global-git-gutter-mode       ; Show changes latest commit
               global-prettify-symbols-mode ; Greek letters should look greek
               projectile-mode              ; Manage and navigate projects
@@ -589,7 +590,7 @@
    programming modes using the =prog-mode-hook=.
 
    #+BEGIN_SRC emacs-lisp
-   (add-hook 'prog-mode-hook 'flyspell-prog-mode)
+   ;;djl (add-hook 'prog-mode-hook 'flyspell-prog-mode)
    #+END_SRC
 
    When working with several languages, we should be able to cycle through
@@ -1604,7 +1605,7 @@
     find-file-hooks             (list 'find-file-hooker)
     mail-mode-hook              'mail-mode-hooker
     mail-setup-hook             'mail-setup-hooker
-    shell-mode-hook             'shell-mode-hooker
+    shell-mode-hook             (list 'shell-mode-hooker)
     shell-selected-hook         'shell-selected-hooker
     c-mode-hook                 'c-mode-hooker
     c++-mode-hook               'c++-mode-hooker
