--- a/init.org
+++ b/init.org
@@ -2722,8 +2722,15 @@ Open up a new window. We're nearly done.
   (add-to-list 'org-latex-packages-alist '("" "minted"))
   (org-babel-do-load-languages
    'org-babel-load-languages
-   '((shell . t) (python . t) (C . t) (ruby . t) (js . t) (ditaa . t)))
+   '((shell . t)
+     (python . t)
+     (C . t)
+     (ruby . t)
+     (js . t)
+     (ditaa . t)
+     ))
   (setq
+   org-ditaa-jar-path "/usr/share/ditaa/ditaa.jar"
    org-latex-pdf-process
    '("pdflatex -shell-escape -interaction nonstopmode -output-directory %o %f"
      "pdflatex -shell-escape -interaction nonstopmode -output-directory %o %f"
