--- a/init.org
+++ b/init.org
@@ -2649,7 +2649,8 @@ Open up a new window. We're nearly done.
    '("~/ME/SyncThing/Inbox.org"
      "~/ME/SyncThing/Work.org"
      "~/ME/SyncThing/Play.org"
-     "~/ME/SyncThing/Phone.org")
+     "~/ME/SyncThing/Phone.org"
+     "~/ME/SyncThing/Projects.org")
    org-enforce-todo-dependencies t
    org-agenda-start-day "+0d"
    org-agenda-span 3
