Add Projects.org and Phone.org to org-agenda-files

--- a/init.org
+++ b/init.org
@@ -2648,7 +2648,9 @@ Open up a new window. We're nearly done.
    org-agenda-files
    '("~/ME/SyncThing/Inbox.org"
      "~/ME/SyncThing/Work.org"
-     "~/ME/SyncThing/Play.org")
+     "~/ME/SyncThing/Play.org"
+     "~/ME/SyncThing/Phone.org"
+     "~/ME/SyncThing/Projects.org")
    org-enforce-todo-dependencies t
    org-agenda-start-day "+0d"
    org-agenda-span 3
